# Squiddie

./: .env  .env_sample  .gitignore  Dockerfile  HealthCheck.java  Pipfile  README.md  application_sample.yaml  bot.py  consts.py  docker-compose.yaml  hacker_news.py  pyproject.toml  pyvenv.cfg  requirements.txt  secret.py
Scripts/: activate  activate.bat
cogs/: _github.py  _wikipedia.py  btc.py  eth.py  event.py  infract.py  invite.py  iplookup.py  misc.py  music.py  news.py  wiki.py  wikipedia.py  xmr.py
extensions/: music.py
squiddie/: __main__.py  bot.py
